# browser-switch

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
docs/: AI_CLEANUP_SPEC.md  BACKUP_RESTORE_SPEC.md  CHROME_WRITEBACK_SPEC.md  IMPORT_SOURCES.md  PRD.md  PRODUCT_THINKING.md  README.md  UX_DESIGN.md  V0.1_PLAN.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
