[package]
name = "browser-switch"
version = "0.1.0"
description = "AI bookmark organizer for Chrome and Firefox"
authors = ["Krip"]
edition = "2021"

[lib]
name = "browser_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
tauri = { version = "2.11.5", features = [] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
